deploy/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jrm-postgres
  labels:
    app: jrm-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jrm-postgres
  template:
    metadata:
      labels:
        app: jrm-postgres
    spec:
      volumes:
      - name: jrm-postgres-persistent-storage
        persistentVolumeClaim:
          claimName: jrm-postgres-pv-claim
      containers:
      - name: jrm-postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: jrm-postgres-persistent-storage
---
apiVersion: v1
kind: Service
metadata:
  name: jrm-postgres-service
spec:
  selector:
    app: jrm-postgres
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
