deploy/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jr-movement-api
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: jr-movement-api.prod.appadem.in
  to:
    kind: Service
    name: jr-movement-api-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
